Add index.css and Update README.md
Signed-off-by: Lee <jessy1092@gmail.com>

--- a/index.html
+++ b/index.html
@@ -3,21 +3,10 @@
 
 <head>
  <meta charset="UTF-8" />
+ <link rel="stylesheet" type="text/css" href="assets/styles/index.css">
  <script type="text/javascript" src="vendors/jquery/1.11.1/jquery-1.11.1.min.js"></script>
- <title>g0v 零時政府 Hackfoldr專案仿造版</title>
+ <title>g0v 零時政府 Hackfoldr專案池</title>
 </head>
-
-<style type="text/css">
-#bar a{color:white;}
-#bar a:hover{color:green;}
-#lnt a{color:black;}
-#lnt a:hover{color:white;background-color:#333;transition-duration:.2s;}
-#select1{line-height:36px;}
-#selectA{text-decoration:none;}
-#selectA div{padding-left:12px;}
-#select1:hover{color:white;background-color:#333;transition-duration:.2s;}
-
-</style>
 
 <body style="overflow:hidden; margin:0; ">
 
@@ -365,11 +354,6 @@
     g0v.asia
     </div></a>
 
-    <a id="selectA" href="http://hackfoldr.org/G8VTV/" target="hackframe">
-    <div id="select1">
-    第五權電視牆監看「評」台g8v.tv
-    </div></a>
-
     <a id="selectA" href="http://ris.g0v.tw" target="hackframe">
     <div id="select1">
     台灣門牌查詢
@@ -411,6 +395,10 @@
     開放政治獻金
     </div></a>
 
+    <a id="selectA" href="http://hackfoldr.org/G8VTV/" target="hackframe">
+    <div id="select1">
+    第五權電視牆監看「評」台g8v.tv
+    </div></a>
 
 
     <div>
